fix overflow on slide

--- a/src/components/slideshow/slideshow.css
+++ b/src/components/slideshow/slideshow.css
@@ -97,7 +97,6 @@ button.cta {
   background-size: cover;
   height: auto;
   left: 10%;
-  overflow: hidden;
   position: absolute;
   width: 100%;
   background: #000;
